src/test/deca/context/valid/ValidCast.deca



{

	float a, b;
	int c, d;

	a = (float) (c);
	
	d = (int) (b);
}
