src/test/deca/context/invalid/VoidCast.deca


{
	float b;

	int a = (void) (b);
}
